Convert Catalog to use RecordMetaDataProto (REL-145)
* Converting Catalog toward using RecordMetaDataProto.MetaData instead of a custom protobuf annotation

* Fixing rebase errors

* Fixing rebase errors

* Removing CatalogData protobuf

* Fixing checkstyle errors

* Dealing with merge conflicts

* Addressing PR comments

Co-authored-by: Scott Fines <scottfines@gmail.com>